themes/common/css/required/containermodule.css
/* Container Styles */

div.containermodule{
	border:1px solid #777777;
	border-width:0 1px 1px 1px;
	padding:0 0 5px 0;
}

#containermodulemenu ul,
#containermodulemenu li {
        padding:0 !important;
        margin:0 !important;
        list-style: none !important;
}

div.containermodule .container_editheader{
	clear:both;
}

div.containermodule span.modtype{
	font-size:9px;
	font-family:verdana;
	color:#111111;
	line-height:10px;
	display:block;
	height:18px;
	width:20px;
	background-image:url(../../images/icons/exp1icons.png);  
	_background-image:url(../../images/icons/exp1icons.gif);  
	background-position:0px -386px; 
	background-repeat:no-repeat;
	cursor:pointer;
}
div.hardcoded-menu span.modtype{
	font-size:9px;
	font-family:verdana;
	color:#111111;
	line-height:1px;
	display:block;
	height:18px;
	width:20px;
	position:absolute;
	background-image:url(../../images/icons/exp1icons.png);  
	_background-image:url(../../images/icons/exp1icons.gif);  
	background-position:0px -386px; 
	background-repeat:no-repeat;
	cursor:pointer;
}

a.modulemenutrigger{
	background-image:url(../../images/icons/exp1icons.png);  
	_background-image:url(../../images/icons/exp1icons.gif);  
	background-position:0 -416px; 
	position:absolute;
	right:0px;
	top:0px;
	display:block;
	width:18px;
	height:15px; 
	text-decoration:none;
}
a.modulemenutrigger:hover{
	text-decoration:none;
}


.hardcoded-menu,
.container_moduleheader,
.container_editheader{
	background-image:url(../../images/icons/exp1icons.png);  
	_background-image:url(../../images/icons/exp1icons.gif);  
	background-position:0 -291px; 
	height:18px;
	position:relative;
	z-index:0;
	width:100%;
}


.container_modulewrapper{
	border:1px solid #999999;
	border-top-width:0px;
	clear:both;
}


.container_moduleheader {
	background-position:0 -263px;
	height:23px;
}
.hardcoded-menu {
	background-position:0 -322px;
	height:18px;
	border:1px solid #944;
	border-width:0 1px;
	position:relative;
}


a.addmodule span.addtext{
	
	vertical-align:middle;
	padding:0 0 0 20px;
	background-color:transparent;
	background-image:url(../../images/icons/exp1icons.png);  
	_background-image:url(../../images/icons/exp1icons.gif);  
	background-repeat:no-repeat;  
	background-position: 3px -473px; 
}
a.addmodule{
	display:block;
	background:#dedede;
	clear:both;
	padding:2px 0;
	float:left;
	width:100%;
	text-align:center;
	text-decoration:none;
	color:blue;
}
a.addmodule:hover{
	display:block;
	background:#333;
	clear:both;
	float:left;
	width:100%;
	text-align:center;
	text-decoration:none;
	color:white;
}

#containermodulemenu.containermenu h6 {
	font-size: 90%;
	font-weight: bold;
	padding: 3px 3px 3px 20px;
	_padding: 3px 3px 3px 10px;
	background-color:#cae7e8;
	color:#333;
	font-family:"trebuchet ms","arail";
	margin:0px;
	border-bottom:1px dotted #888;
    background-image:url(../../images/icons/exp1icons.png);  
	_background-image:url(../../images/icons/exp1icons.gif);  
 	background-repeat:no-repeat;
	background-position: 0px -548px; 
}

/* The menu */

#containermodulemenu{
	text-align:left;
}
#containermodulemenu ul,
#containermodulemenu ul li{
	list-style-image:none;
}

#containermodulemenu.containermenu .yuimenuitemlabel{
	color:#333333;
}
#containermodulemenu.containermenu .yuimenuitem-selected{
	background-color:#445;
}
#containermodulemenu.containermenu .yuimenuitemlabel-selected{
	color:#ffffff;
	text-decoration:none;
}
#containermodulemenu.containermenu .bd{
	background-color:#b8d3d4;
	/*width:150px;*/
	border:1px solid #333333;
	padding-bottom:3px;
}

#containermodulemenu.containermenu .yuimenuitem .yuimenuitemlabel {
    background-image:url(../../images/icons/exp1icons.png);  
	_background-image:url(../../images/icons/exp1icons.gif);  
	font-family:"Trebuchet MS","Verdana";
	font-size:12px;
 	background-repeat:no-repeat;
	padding:3px 5px 3px 20px;
}
#containermodulemenu.containermenu .yuimenuitem .yuimenuitemlabel-selected {
    color:#ffffff;
}

#containermodulemenu.containermenu .yuimenuitem .yuimenuitemlabel-selected {
    color:#ffffff;
}

#containermodulemenu .yui-menu-shadow {
    position: absolute;
    visibility: hidden;
    z-index: -1;
}
#containermodulemenu.containermenu .yui-menu-shadow-visible{
	background-color:#000;
	opacity:.25;*filter:alpha(opacity=25);
    top: 2px;
    right: -2px;
    left: 2px;
    bottom: -2px;
    visibility: visible;
}



li.rankup a {
    background-position:0px -159px; 
	display:block;	
}
li.rankdown a { 
    background-position:0px -128px;
	display:block;	
}
li.userperms a {
    background-position:0px -8px;
	display:block;	
}
li.groupperms a {
    background-position:0px -38px;
	display:block;	
}
li.configview a {
    background-position:0px -100px;
	display:block;	
}
li.configsettings a {
    background-position:0px -360px;
	display:block;	
}
li.deletemod a {
    background-position:0px -70px ;
	display:block;	
}

/*END THE MENU*/

